--- a/src/main/webapp/login_app.html
+++ b/src/main/webapp/login_app.html
@@ -3,28 +3,150 @@
 <head>
   <meta charset="UTF-8">
   <title>Login - Ocean View Resort</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
   <style>
-    body { background: #f4f6f7; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; font-family: sans-serif; }
-    .login-card { background: white; padding: 40px; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); width: 350px; text-align: center; }
-    .error-msg { color: #c0392b; background: #fadbd8; padding: 10px; border-radius: 4px; margin-bottom: 15px; display: none; font-size: 14px; }
-    input { width: 100%; padding: 10px; margin-bottom: 15px; border: 1px solid #ddd; border-radius: 4px; box-sizing: border-box; }
-    button { width: 100%; padding: 12px; background: #3498db; color: white; border: none; border-radius: 4px; cursor: pointer; font-size: 16px; }
-    button:hover { background: #2980b9; }
+    * { margin:0; padding:0; box-sizing:border-box; }
+
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      padding: 20px;
+      color: #f0f8ff;
+    }
+
+    .login-card {
+      background: rgba(255,255,255,0.05);
+      backdrop-filter: blur(12px);
+      padding: 40px;
+      border-radius: 14px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.4);
+      width: 100%;
+      max-width: 380px;
+      text-align: center;
+      animation: fadeIn 0.6s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(15px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    h2 {
+      margin-bottom: 25px;
+      font-weight: 600;
+      color: #00c6ff;
+    }
+
+    .error-msg {
+      color: #ffffff;
+      background: rgba(231, 76, 60, 0.2);
+      border: 1px solid #e74c3c;
+      padding: 10px;
+      border-radius: 6px;
+      margin-bottom: 15px;
+      display: none;
+      font-size: 14px;
+    }
+
+    .input-group {
+      position: relative;
+      margin-bottom: 18px;
+    }
+
+    .input-group i {
+      position: absolute;
+      left: 12px;
+      top: 50%;
+      transform: translateY(-50%);
+      color: rgba(255,255,255,0.6);
+    }
+
+    input {
+      width: 100%;
+      padding: 12px 12px 12px 40px;
+      border-radius: 8px;
+      border: 1px solid rgba(255,255,255,0.2);
+      background: rgba(255,255,255,0.08);
+      color: #ffffff;
+      font-size: 14px;
+      outline: none;
+      transition: 0.3s;
+    }
+
+    input:focus {
+      border-color: #00c6ff;
+      box-shadow: 0 0 8px rgba(0,198,255,0.4);
+    }
+
+    button {
+      width: 100%;
+      padding: 12px;
+      background: #00c6ff;
+      color: #0f2027;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 15px;
+      font-weight: 600;
+      transition: 0.3s;
+    }
+
+    button:hover {
+      background: #00a6d6;
+      transform: translateY(-2px);
+    }
+
+    button:disabled {
+      background: rgba(255,255,255,0.3);
+      cursor: not-allowed;
+      transform: none;
+    }
+
+    .version {
+      margin-top: 20px;
+      font-size: 12px;
+      color: rgba(255,255,255,0.6);
+    }
+
+    @media(max-width:480px){
+      .login-card {
+        padding: 30px 25px;
+      }
+    }
+
   </style>
 </head>
+
 <body>
 
 <div class="login-card">
-  <h2 style="color: #2c3e50;">Ocean View Login</h2>
+  <h2><i class="fas fa-water"></i> Ocean View Login</h2>
+
   <div id="errorArea" class="error-msg"></div>
 
   <form onsubmit="handleLogin(event)">
-    <input type="email" id="email" placeholder="Email Address" required>
-    <input type="password" id="password" placeholder="Password" required>
+    <div class="input-group">
+      <i class="fas fa-envelope"></i>
+      <input type="email" id="email" placeholder="Email Address" required>
+    </div>
+
+    <div class="input-group">
+      <i class="fas fa-lock"></i>
+      <input type="password" id="password" placeholder="Password" required>
+    </div>
+
     <button type="submit" id="btnSubmit">Sign In</button>
   </form>
 
-  <p style="margin-top: 20px; font-size: 12px; color: #95a5a6;">v2.0 (MVC + API)</p>
+  <div class="version">v2.0 (MVC + API)</div>
 </div>
 
 <script>
@@ -44,7 +166,6 @@
       params.append('email', email);
       params.append('password', password);
 
-      // Calls LoginServlet
       const response = await fetch('login', {
         method: 'POST',
         headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
