style: Replace emojis with Font Awesome icons for cleaner professional UI

--- a/src/main/webapp/receptionist_dashboard.html
+++ b/src/main/webapp/receptionist_dashboard.html
@@ -3,51 +3,244 @@
 <head>
   <meta charset="UTF-8">
   <title>Receptionist Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Font Awesome Icons -->
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
   <style>
-    body { background: #f4f6f7; font-family: sans-serif; padding: 20px; }
-    .dashboard-container { max-width: 1000px; margin: 0 auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-    .header { display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid #ecf0f1; padding-bottom: 15px; margin-bottom: 20px; }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
 
-    .btn-logout { background: #e74c3c; color: white; text-decoration: none; padding: 8px 15px; border-radius: 4px; font-weight: bold; }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+      min-height: 100vh;
+      padding: 40px;
+      color: #ffffff;
+    }
 
-    /* Action Cards Grid */
-    .action-cards { display: flex; gap: 20px; margin-bottom: 30px; }
-    .card { flex: 1; padding: 20px; border-radius: 8px; text-align: center; cursor: pointer; text-decoration: none; font-weight: bold; color: white; box-shadow: 0 2px 5px rgba(0,0,0,0.1); transition: 0.2s; }
-    .card:hover { transform: translateY(-3px); }
+    .dashboard-container {
+      width: 100%;
+      max-width: 1400px;
+      margin: auto;
+    }
 
-    .card-booking { background: #3498db; }
-    .card-profile { background: #9b59b6; }
-    .card-help { background: #f1c40f; color: #333; }
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 40px;
+      border-bottom: 1px solid rgba(255,255,255,0.2);
+      padding-bottom: 15px;
+    }
 
-    /* Profile Form (Hidden by default) */
-    #profileSection { display: none; background: #ecf0f1; padding: 20px; border-radius: 8px; margin-bottom: 20px; border: 1px solid #ddd; }
-    input { width: 100%; padding: 10px; margin: 5px 0 15px 0; border: 1px solid #ddd; border-radius: 4px; box-sizing: border-box; }
-    .btn-save { background: #27ae60; color: white; border: none; padding: 10px 20px; cursor: pointer; border-radius: 4px; }
+    .header h2 {
+      font-weight: 500;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
 
-    /* Table */
-    table { width: 100%; border-collapse: collapse; }
-    th { background: #2c3e50; color: white; padding: 12px; text-align: left; }
-    td { padding: 12px; border-bottom: 1px solid #ddd; }
-    .cancel-btn { background: #e74c3c; color: white; border: none; padding: 5px 10px; border-radius: 3px; cursor: pointer; }
+    .btn-logout {
+      background: #e74c3c;
+      color: white;
+      text-decoration: none;
+      padding: 8px 18px;
+      border-radius: 8px;
+      font-weight: 600;
+      transition: 0.3s;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .btn-logout:hover {
+      background: #c0392b;
+      transform: translateY(-2px);
+    }
+
+    .action-cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 25px;
+      margin-bottom: 40px;
+    }
+
+    .card {
+      padding: 30px;
+      border-radius: 16px;
+      text-align: center;
+      cursor: pointer;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 15px;
+      color: white;
+      backdrop-filter: blur(12px);
+      background: rgba(255,255,255,0.08);
+      border: 1px solid rgba(255,255,255,0.2);
+      transition: 0.3s ease;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .card i {
+      font-size: 22px;
+    }
+
+    .card:hover {
+      transform: translateY(-6px);
+      background: rgba(255,255,255,0.15);
+    }
+
+    #profileSection {
+      display: none;
+      backdrop-filter: blur(12px);
+      background: rgba(255,255,255,0.08);
+      border: 1px solid rgba(255,255,255,0.2);
+      padding: 25px;
+      border-radius: 16px;
+      margin-bottom: 40px;
+    }
+
+    #profileSection h3 {
+      margin-bottom: 10px;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    #profileSection p {
+      font-size: 13px;
+      opacity: 0.8;
+      margin-bottom: 15px;
+    }
+
+    input {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 18px;
+      border-radius: 8px;
+      border: none;
+      outline: none;
+    }
+
+    .btn-save {
+      background: #27ae60;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 8px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: 0.3s;
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+    }
+
+    .btn-save:hover {
+      background: #1e8449;
+    }
+
+    h3 {
+      margin-bottom: 15px;
+      font-weight: 500;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      backdrop-filter: blur(12px);
+      background: rgba(255,255,255,0.08);
+      border-radius: 16px;
+      overflow: hidden;
+    }
+
+    th {
+      background: rgba(0,0,0,0.3);
+      padding: 14px;
+      text-align: left;
+      font-weight: 600;
+    }
+
+    td {
+      padding: 14px;
+      border-bottom: 1px solid rgba(255,255,255,0.1);
+    }
+
+    tr:hover {
+      background: rgba(255,255,255,0.05);
+    }
+
+    .cancel-btn {
+      background: #e74c3c;
+      color: white;
+      border: none;
+      padding: 6px 12px;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: 0.3s;
+      display: inline-flex;
+      align-items: center;
+      gap: 5px;
+    }
+
+    .cancel-btn:hover {
+      background: #c0392b;
+    }
+
+    @media(max-width:768px) {
+      body { padding: 20px; }
+
+      .header {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 15px;
+      }
+    }
   </style>
 </head>
 <body>
 
 <div class="dashboard-container">
+
   <div class="header">
-    <h2>👋 Welcome, <span id="userNameDisplay">Receptionist</span></h2>
-    <a href="#" onclick="logout()" class="btn-logout">Logout</a>
+    <h2><i class="fas fa-user-tie"></i> Welcome, <span id="userNameDisplay">Receptionist</span></h2>
+    <a href="#" onclick="logout()" class="btn-logout">
+      <i class="fas fa-sign-out-alt"></i> Logout
+    </a>
   </div>
 
   <div class="action-cards">
-    <a href="search_app.html" class="card card-booking">🔍 New Booking</a>
-    <a href="calendar.html" class="card" style="background: #e67e22;">📅 Room Calendar</a> <div onclick="toggleProfile()" class="card card-profile">👤 My Profile</div>
-    <a href="help.html" class="card card-help">❓ Help Guide</a>
+    <a href="search_app.html" class="card">
+      <i class="fas fa-search"></i>
+      New Booking
+    </a>
+
+    <a href="calendar.html" class="card">
+      <i class="fas fa-calendar-alt"></i>
+      Room Calendar
+    </a>
+
+    <div onclick="toggleProfile()" class="card">
+      <i class="fas fa-user-cog"></i>
+      My Profile
+    </div>
+
+    <a href="help.html" class="card">
+      <i class="fas fa-question-circle"></i>
+      Help Guide
+    </a>
   </div>
 
   <div id="profileSection">
-    <h3 style="margin-top:0;">Edit Profile</h3>
-    <p style="font-size: 13px; color: #7f8c8d;">Leave password blank if you don't want to change it.</p>
+    <h3><i class="fas fa-user-edit"></i> Edit Profile</h3>
+    <p>Leave password blank if you don't want to change it.</p>
 
     <form onsubmit="updateProfile(event)">
       <label><strong>Full Name</strong></label>
@@ -56,96 +249,85 @@
       <label><strong>New Password</strong></label>
       <input type="password" id="pPass" placeholder="Enter new password to change...">
 
-      <button type="submit" class="btn-save">Update Profile</button>
-      <button type="button" onclick="toggleProfile()" style="background:none; border:none; color:#7f8c8d; cursor:pointer; margin-left:10px;">Cancel</button>
+      <button type="submit" class="btn-save">
+        <i class="fas fa-save"></i> Update Profile
+      </button>
+      <button type="button" onclick="toggleProfile()" style="background:none; border:none; color:white; cursor:pointer; margin-left:10px;">
+        Cancel
+      </button>
     </form>
   </div>
 
-  <h3>📅 Recent Reservations</h3>
+  <h3><i class="fas fa-list"></i> Recent Reservations</h3>
+
   <table>
     <thead>
-    <tr><th>ID</th><th>Room</th><th>Guest</th><th>Check-In</th><th>Check-Out</th><th>Action</th></tr>
+    <tr>
+      <th>ID</th><th>Room</th><th>Guest</th><th>Check-In</th><th>Check-Out</th><th>Action</th>
+    </tr>
     </thead>
     <tbody id="tableBody">
-    <tr><td colspan="6" style="text-align: center;">Loading...</td></tr>
+    <tr><td colspan="6" style="text-align:center;">Loading...</td></tr>
     </tbody>
   </table>
+
 </div>
 
 <script>
-  // 1. INITIAL LOAD
-  window.onload = async function() {
-    loadReservations();
-
-    // Fetch current user details via a trick: We ask the backend 'Who am I?'
-    // (Usually handled by session, here we assume name is known or we can fetch it)
-    // For simplicity, we just let the user type their new name.
-  }
-
-  // 2. TOGGLE PROFILE SECTION
+  window.onload = async function() { loadReservations(); }
   function toggleProfile() {
     const sec = document.getElementById('profileSection');
     sec.style.display = (sec.style.display === 'block') ? 'none' : 'block';
   }
-
-  // 3. UPDATE PROFILE LOGIC
   async function updateProfile(e) {
     e.preventDefault();
     const newName = document.getElementById('pName').value;
     const newPass = document.getElementById('pPass').value;
-
     const params = new URLSearchParams();
     params.append('name', newName);
     params.append('password', newPass);
-
     try {
       const res = await fetch('updateProfile', { method: 'POST', body: params });
       const json = await res.json();
-
       if (json.status === 'success') {
-        alert("✅ Profile Updated Successfully!");
+        alert("Profile Updated Successfully!");
         document.getElementById('userNameDisplay').innerText = newName;
-        document.getElementById('pPass').value = ""; // Clear password field
-        toggleProfile(); // Close section
-      } else {
-        alert("❌ Error: " + json.message);
-      }
-    } catch (err) {
-      alert("❌ Server Error");
-    }
+        document.getElementById('pPass').value = "";
+        toggleProfile();
+      } else { alert("Error: " + json.message); }
+    } catch (err) { alert("Server Error"); }
   }
-
-  // 4. LOAD RESERVATIONS
   async function loadReservations() {
     const tableBody = document.getElementById('tableBody');
     try {
       const response = await fetch('viewReservations');
       const data = await response.json();
       tableBody.innerHTML = '';
-
-      if (data.length === 0) tableBody.innerHTML = '<tr><td colspan="6" style="text-align: center;">No bookings found.</td></tr>';
+      if (data.length === 0)
+        tableBody.innerHTML = '<tr><td colspan="6" style="text-align:center;">No bookings found.</td></tr>';
       else {
         data.forEach(res => {
           tableBody.innerHTML += `
-                        <tr>
-                            <td>#${res.id}</td>
-                            <td><strong>${res.roomNumber}</strong></td>
-                            <td>${res.customerName}</td>
-                            <td>${res.checkIn}</td>
-                            <td>${res.checkOut}</td>
-                            <td><button onclick="cancelBooking(${res.id})" class="cancel-btn">✖ Cancel</button></td>
-                        </tr>`;
+            <tr>
+              <td>#${res.id}</td>
+              <td><strong>${res.roomNumber}</strong></td>
+              <td>${res.customerName}</td>
+              <td>${res.checkIn}</td>
+              <td>${res.checkOut}</td>
+              <td><button onclick="cancelBooking(${res.id})" class="cancel-btn">
+              <i class="fas fa-times"></i> Cancel</button></td>
+            </tr>`;
         });
       }
-    } catch (e) { tableBody.innerHTML = '<tr><td colspan="6" style="color: red;">Error loading data.</td></tr>'; }
+    } catch (e) {
+      tableBody.innerHTML = '<tr><td colspan="6" style="color:red;">Error loading data.</td></tr>';
+    }
   }
-
   async function cancelBooking(id) {
     if(!confirm("Cancel this booking?")) return;
     await fetch('cancelReservation?id=' + id, { method: 'POST' });
     loadReservations();
   }
-
   async function logout() {
     await fetch('logout');
     window.location.href = 'login_app.html';
